<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="36dp"
    tools:context=".MainFragment">

    <Button
        android:id="@+id/constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/constraint_layout" />

    <Button
        android:id="@+id/constraint_transition"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/constraint_transition" />

    <Button
        android:id="@+id/constraint_property_set"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/constraint_property_set" />

    <Button
        android:id="@+id/constraint_motion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/constraint_motion" />

    <Button
        android:id="@+id/constraint_custom_attribute"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/constraint_custom_attribute" />

    <Button
        android:id="@+id/transition_motion_interpolator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/transition_motion_interpolator" />

    <Button
        android:id="@+id/transition_on_click"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/transition_onclick" />
</LinearLayout>